<resources>
    <string name="app_name">Pantry Bank</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Create an account</string>
    <string name="title_activity_new_item">Add new item</string>
    <string name="title_activity_edit_item">Edit item</string>
    <string name="title_activity_food_list">Add an item</string>
    <string name="title_activity_new_category">Add new category</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="button_login">Login</string>
    <string name="button_new_account">No account yet? Create one</string>
    <string name="button_register">Create account</string>
    <string name="button_login_return">Already a member? Log in</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Enter a password between 4 and 10 characters</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_login_failed">Login failed</string>
    <string name="error_email_login_failed">Incorrect login credentials</string>
    <string name="error_email_registration_failed">Registration failed</string>
    <string name="authenticating">Authenticating&#8230;</string>

    <!-- MainActivity Tabs -->
    <string name="tab_pantry">Pantry</string>
    <string name="tab_list">Grocery List</string>
    <string name="tab_recipes">Recipes</string>

    <!-- ListView -->
    <string name="food_item_placeholder" translatable="false">Food Item</string>
    <string name="food_quantity_placeholder" translatable="false">Quantity</string>

    <!-- New Item Activity -->
    <string name="action_done">Done</string>
    <string name="label_name">Item name</string>
    <string name="label_category">Category</string>
    <string name="label_quantity_type">Quantity type ?</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_pinned">Pinned ?</string>
    <string name="button_delete">Delete Item</string>

    <!-- Food List Activity -->
    <string name="search_hint">Add an item</string>
    <string name="action_search">Search</string>

    <!-- Quantity types -->
    <string-array name="quantity_types">
        <item>Numerical</item>
        <item>Approximate</item>
    </string-array>

    <!-- Quantity Approximations -->
    <string-array name="quantity_approx">
        <item>None Remaining</item>
        <item>Running Low</item>
        <item>Normal</item>
        <item>Plenty</item>
    </string-array>

    <!-- New Item FAB -->
    <string name="menu_new_category">Add new category</string>
    <string name="menu_new_item">Add an item</string>


    <!-- Errors -->
    <string name="error_cannot_delete_category">Could not delete category. Make sure the category is empty.</string>

    <string name="uncategorized">uncategorized</string>
</resources>
