<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.github.deltajulio.pantrybank.auth.LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/auth_activity_vertical_margin"
    android:paddingLeft="@dimen/auth_activity_horizontal_margin"
    android:paddingRight="@dimen/auth_activity_horizontal_margin"
    >

    <ImageView
        app:srcCompat="@drawable/logo_black"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginBottom="24dp"
        android:layout_gravity="center_horizontal"
        tools:ignore="ContentDescription"
        />

    <!-- Email Label -->
    <android.support.design.widget.TextInputLayout
        style="@style/AuthenticationLabel"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_email"
            style="@style/AuthenticationText"
            android:inputType="textEmailAddress"
            android:hint="@string/prompt_email"
            />
    </android.support.design.widget.TextInputLayout>

    <!-- Password Label -->
    <android.support.design.widget.TextInputLayout
        style="@style/AuthenticationLabel"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_password"
            style="@style/AuthenticationText"
            android:inputType="textPassword"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            />
    </android.support.design.widget.TextInputLayout>

    <!-- Login Button -->
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:text="@string/button_login"
        />

    <!-- Register Button -->
    <TextView
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/button_new_account"
        android:gravity="center"
        android:textSize="16dp"
        />

</LinearLayout>
