<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.github.deltajulio.pantrybank.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <android.support.design.widget.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.design.widget.TabItem
            android:id="@+id/tab_pantry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tab_pantry"
            />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tab_list"
            />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_recipes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tab_recipes"
            />

    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
        />

</LinearLayout>
