<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.deltajulio.pantrybank.NewItemActivity"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        >

        <!-- Item name input -->
        <android.support.design.widget.TextInputLayout
            style="@style/NewItemLabel"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            >

            <android.support.design.widget.TextInputEditText
                style="@style/NewItemText"
                android:inputType="text"
                android:hint="@string/label_name"
                />

        </android.support.design.widget.TextInputLayout>

        <!-- Category input -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/input_label_vertical_padding"
            android:layout_marginBottom="@dimen/input_label_vertical_padding"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_category"
                style="@style/InputLabel"
                />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/category_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                />

        </LinearLayout>

        <!-- QuantityType input -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/input_label_vertical_padding"
            android:layout_marginBottom="@dimen/input_label_vertical_padding"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_quantity_type"
                style="@style/InputLabel"
                />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/quantity_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/input_label_vertical_padding"
            android:layout_marginBottom="@dimen/input_label_vertical_padding"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/input_label_horizontal_padding"
                android:layout_marginLeft="@dimen/input_label_horizontal_padding"
                android:text="@string/label_pinned"
                />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/pinned_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/input_label_horizontal_padding"
                android:layout_marginEnd="@dimen/input_label_horizontal_padding"
                />

        </RelativeLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
